--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -11,7 +11,7 @@
         }
 
         .Bdc\(red\) {
-            border-color: red !important;
+            border-color: red;
         }
 
         .C\(red\) {
@@ -38,6 +38,12 @@
             <ul class="P(0)">
                 <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} days)|"></li>
             </ul>
+            <form method="post" th:action="@{/projects/{projectId}(projectId=${project.id})}">
+                <label>Deadline
+                    <input name="deadline" type="datetime-local" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}" required>
+                </label>
+                <button type="submit">Create tasks >></button>
+            </form>
         </dd>
     </dl>
     <!--/*@thymesVar id="project" type="io.github.mat3e.todoapp.model.projection.ProjectWriteModel"*/-->
@@ -51,10 +57,10 @@
             <fieldset th:each="step,stepStat : *{steps}">
                 <legend th:text="|Step ${stepStat.index + 1}|"></legend>
                 <label>Description
-                    <input type = "text" th:field="*{steps[__${stepStat.index}__].description}" />
+                    <input type = "text" th:field="*{steps[__${stepStat.index}__].description}" th:errorclass="'Bdc(red)'"/>
                 </label>
                 <label>Days to deadline
-                    <input type="number" th:field="${project.steps[__${stepStat.index}__].daysToDeadline}" />
+                    <input type="number" th:field="${project.steps[__${stepStat.index}__].daysToDeadline}" th:errorclass="'Bdc(red)'"/>
                 </label>
             </fieldset>
             <div>
