--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -5,18 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groups</title>
     <link rel="stylesheet" href="awsm.min.css">
+    <style>
+        .Bd {
+            border: 1px solid black;
+        }
+        .M\(0\) {
+            margin: 0;
+        }
+        .C\(Red\) {
+            color: red;
+        }
+        .BdC\(Red\) {
+            border-color: red;
+        }
+        .P\(10\) {
+            padding: 10px;
+        }
+        .Hide {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <main>
+        <h2 th:if="${msg != null}" th:text="${msg}"></h2>
         <!--/*@thymesVar id="groups" type="java.util.List<io.github.mat3e.todoapp.model.projection.GroupReadModel>"*/-->
-        <dl th:each="group : ${groups}">
+        <dl th:each="group : ${groups}" class="Bd P(10)">
             <dt>
                 <label>
                     <input type="checkbox" />
                     <span th:text="${group.description}"></span>
                     <small th:text="|(${group.deadline})|"></small>
                 </label>
-                <hr>
+                <hr class="M(0)">
             </dt>
             <dd>
                 <a th:href="@{/tasks.html(group=${group.id})}">
@@ -31,23 +52,27 @@
         </dl>
         <!--/*@thymesVar id="group" type="io.github.mat3e.todoapp.model.projection.GroupWriteModel"*/-->
         <form method="post" th:action="@{/groups}" th:object="${group}">
+            <h2 th:if="${#fields.hasAnyErrors()}" th:errors="*{all}" class="C(Red)"></h2>
             <fieldset>
                 <legend>New Group</legend>
                 <label>Description
-                    <input type="text" th:field="*{description}">
+                    <input type="text" th:field="*{description}" th:errorclass="'BdC(Red)'">
                 </label>
                 <fieldset th:each="task,taskStat : *{tasks}">
-                    <legend>"| Task ${taskStat} |"</legend>
+                    <legend th:text="| Task ${taskStat.index + 1} |"></legend>
                     <label>Description
-                        <input type="text" th:field="*{tasks[__${taskStat.index}__].description}">
+                        <input type="text" th:field="*{tasks[__${taskStat.index}__].description}" th:errorclass="'BdC(Red)'">
                     </label>
                     <label>Deadline
                         <input
                                type="datetime-local"
                                th:field="*{tasks[__${taskStat.index}__].deadline}"
-                               pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}" required
+                               pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}"
                         />
                     </label>
+                    <div>
+                        <button type="submit" name="removeTask" th:value="${taskStat.index}">DELETE</button>
+                    </div>
                 </fieldset>
                 <p>
                     <button type="submit" name="addTask">+</button>
